--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <main class="post">
   <hgroup class="heading">
     <h1 class="title">{{ page.title }}</h1>
-    <h2 class="subtitle">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</h2>
+    <h2 class="subtitle">{{ page.subtitle }}</h2>
   </hgroup>
   <article class="content">
     {{ content }}
