--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,5 @@
 <footer class="site-footer">
 </footer>
+<script type="text/javascript" src="{{ "/bower_components/jquery/dist/jquery.min.js" | prepend: site.baseurl }}"></script>
+<script type="text/javascript" src="{{ "/bower_components/jquery.typer/src/jquery.typer.js" | prepend: site.baseurl }}"></script>
+<script type="text/javascript" src="{{ "/js/site.js" | prepend: site.baseurl }}"></script>
