--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
   <nav class="site-nav">
     {% for page in site.pages %}
       {% if page.title %}
-        <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+        <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
       {% endif %}
     {% endfor %}
   </nav>
