--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -1,4 +1,4 @@
-body,button,input,textarea{ font-family: 'Source Sans Pro', Arial, sans-serif;}
+body,button,input,textarea{ font-family: Verdana, Arial, sans-serif;}
 
 html{
   // background-attachment: fixed;
@@ -20,16 +20,26 @@ html{
 }
 body{ color: $text; font-size: 1rem; -webkit-font-smoothing: antialiased; line-height: 1.5; margin: 0 auto; text-rendering: optimizeLegibility;}
 a{ color: $link;}
-  // a:visited{ color: $link-visited;}
-  a:hover{ color: $text;}
+  a:visited{ color: $link-visited;}
+  a:hover{ color: $link-hover;}
 input[type="text"]{ border: 1px solid $border; border-radius: 3px; font-size: 0.8rem; height: 2rem; padding: 0.5em 0.75em;}
-button{ @include buttonize($hue, 71, 96); border-radius: 3px; display: inline-block; font-size: 0.8rem; height: 2rem; line-height: 1; padding: 0 0.75em; vertical-align: top;}
+  input[type="text"]:hover{ border-color: $text-light;}
+  input[type="text"]:focus{ border-color: $link; box-shadow: inset 0 0 0 1px $link;}
+button{ background: $link; border: none; border-radius: 3px; color: white; display: inline-block; font-size: 0.8rem; height: 2rem; line-height: 1; padding: 0 0.75em; vertical-align: top;}
+  button:hover,
+  button:focus{ background: $link-hover;}
+  button:active{ background: $link-hover; box-shadow: inset 0 2px 4px rgba(black, 0.3); padding-top: 1px;}
 
-.site-header{ background: $link; color: white; height: 50px; position: relative; z-index: 1;}
+.site-header{ color: white; height: 50px; position: relative; z-index: 1;}
 .site-header a{ text-decoration: none;}
 .site-title{ @include hidden-text; background: $link url(/img/how-css-works-icon@2x.png) no-repeat center center; background-size: 50px 50px; content: ''; display: block; float: left; height: 50px; width: 50px;}
-.site-footer{ background: $background; color: $text-medium; font-size: 0.8rem; padding: 4rem 0;}
-.site-footer section{ margin: 0 2rem 2rem;}
+.site-nav{ float: right; font-size: 0.8rem; line-height: 50px;}
+.site-nav a{ color: $text-light; margin-right: 1rem;}
+  .site-nav a:visited{ color: $text-light;}
+  .site-nav a:hover{ color: $text-dark;}
+  .site-nav a.active{ color: $link;}
+.site-footer{ background: $background; color: $text-medium; font-size: 0.8rem; padding: 4rem 2rem;}
+.site-footer section{ margin-bottom: 2rem;}
   .site-footer section:last-child{ margin-bottom: 0;}
 .site-footer h4{ color: $text-light; font-size: 0.8em; letter-spacing: 0.1em; text-transform: uppercase;}
 .site-footer form{ margin: 0.5rem 0;}
