--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1,30 +1,32 @@
 .main{ background: white; padding: 4rem 2rem; position: relative;}
-.heading{ margin-bottom: 4rem; position: relative; text-align: center;}
+.heading{ margin-bottom: 2rem; position: relative;}
 .logo{ height: 162px; width: 152px;}
-.title{ color: $title; font-size: 2.2rem; line-height: 1;}
-.subtitle{ color: $subtitle; font-size: 1.2rem; line-height: 1.25; margin-top: 0.5rem;}
-.list li{ display: block; margin-top: 2rem;}
+.title{ color: $title; font-size: 1.8rem; line-height: 1;}
+.subtitle{ color: $subtitle; font-size: 1rem; line-height: 1.25; margin-top: 0.5rem;}
+.list{ border-bottom: 1px solid $border;}
+.list li{ border-top: 1px solid $border; display: block; padding: 1rem 0;}
   .list li:first-child{ margin-top: 0;}
 .list a{ text-decoration: none;}
-  .list a:hover{ text-decoration: underline;}
-.list-title{ font-size: 1.4rem; line-height: 1;}
-.list-subtitle{ color: $text; line-height: 1.25; margin-top: 0.25rem;}
+.list-info{ color: $text-light; float: right; font-size: 0.8rem; font-style: normal; line-height: 1.25;}
+.list-title{ font-size: 1.4rem; line-height: 1.25;}
+.list-subtitle{ color: $text-light; line-height: 1.25;}
 
 .content code{ background: $background; border: 1px solid $border; border-radius: 2px; color: $link; font-size: 0.8em; padding: 2px 4px; vertical-align: baseline;}
 .content aside{ color: $text-light; font-size: 0.8rem;}
 .content blockquote{ background: $background; border-left: 0.25rem solid $link; color: $text-medium; font-size: 1.2rem; padding: 1.5rem;}
-.content h3{ color: $text-darker; font-size: 1.4rem; font-weight: bold; margin: 2rem 0 1rem; padding-left: 0.75em; position: relative;}
-.content h3 a{ left: 0; position: absolute; text-decoration: none;}
-  .content h3{ padding-left: 0;}
-  .content h3 a{ left: auto; margin-right: 0.25em; right: 100%;}
-.content p{ margin: 1rem 0;}
-  .content p:first-child{ margin-top: 0;}
+.content h3{ color: $text-darker; font-size: 1.4rem; font-weight: bold; margin: 2rem 0 1rem; position: relative;}
+.content h3 a{ margin-right: 0.25em; position: absolute; right: 100%; text-decoration: none;}
+.content p{ margin: 0.5em 0 1.5em;}
+  .content p:first-child{ font-size: 1.2em; margin-top: 0;}
   .content p:last-child{ margin-bottom: 0;}
 .content ul{ list-style: disc outside; margin: 1rem;}
   .content ul:last-child{ margin-bottom: 0;}
 .content ul ul{ list-style-type: circle; margin: 0 2rem;}
+.content .list{ margin: 0;}
+.content .list .list-title{ margin: 0;}
+.content .list .list-subtitle{ margin: 0;}
 
-.browser{ background: white; border: 1px solid $border; border-radius: 5px; box-shadow: 0 0.5rem 1rem rgba(black, 0.1); margin: 1rem 0; min-height: 240px; overflow: hidden;}
+.browser{ background: white; border: 1px solid $border; border-radius: 5px; box-shadow: 0 2px 4px rgba(black, 0.1); margin: 1rem 0; min-height: 240px; overflow: hidden;}
 .browser-bar{ background: $background; height: 1.5rem; padding: 0.5rem 1rem 0.5rem 4rem; position: relative;}
 .browser-bar div,
 .browser-bar div:before,
