--- a/_sass/_responsiveness.scss
+++ b/_sass/_responsiveness.scss
@@ -1,17 +1,15 @@
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 37rem) {
 
-  html{ background: $background; font-size: 20px;}
-  body{ max-width: 840px;}
   input[type="text"]{ width: 240px;}
 
-  .site-header{ background: none;}
-  .site-nav{ display: block; float: right; font-size: 0.8rem; line-height: 50px;}
-  .site-nav a{ margin-left: 1rem;}
-    .site-nav a:hover{ text-decoration: underline;}
-  .site-footer section{ display: inline-block; vertical-align: top;}
+  .site-header,
+  .site-footer section,
+  .main{ margin-left: auto; margin-right: auto; max-width: 33rem;}
 
-  .main{ box-shadow: 0 25px 50px rgba(black, 0.04); padding: 4rem;}
-  .content aside{ float: right; margin-top: -240px; padding-left: 1rem; width: 50%;}
-  .browser{ width: 50%;}
+  .site-footer,
+  .main{ padding: 4rem 0;}
+
+  .content aside{ float: right; margin-top: -240px; padding-left: 1rem; width: 30%;}
+  .browser{ width: 70%;}
 
 }
